2023-07-01  Bruno Haible  <bruno@clisp.org>

	doc: Tweaks.
	Reported by Laurent Lyaudet <laurent.lyaudet@gmail.com> in
	<https://lists.gnu.org/archive/html/bug-gperf/2023-06/msg00000.html>.
	* doc/gperf.texi: Update copyright year. Fix some typos.
	(Bugs): Don't use the term "recent enhancements", since that's over
	20 years ago. Don't mention RAM requirements, since the execution time
	is the bigger inconvenience nowadays.

2023-06-29  Bruno Haible  <bruno@clisp.org>

	Update the installation instructions for Windows.
	* INSTALL.windows: Add a note about MSYS2.

2023-06-22  Bruno Haible  <bruno@clisp.org>

	Ensure that makeinfo ≥ 6.8 checks the @menu structure.
	See
	<https://lists.gnu.org/archive/html/bug-texinfo/2023-06/msg00015.html>.
	* doc/Makefile.in (MAKEINFO): Add option
	"-c CHECK_NORMAL_MENU_STRUCTURE=1".

2022-09-08  Bruno Haible  <bruno@clisp.org>

	Fix a warning regarding strncmp.
	Reported by Sam James in <https://savannah.gnu.org/bugs/?63031>.
	* lib/getopt.c (strncmp): Declare with a prototype.

2022-07-17  Bruno Haible  <bruno@clisp.org>

	Split autogen.sh into autopull.sh and autogen.sh.
	* autopull.sh: New file, based on autogen.sh.
	* autogen.sh: Remove code that was moved to autopull.sh.
	* Makefile.in (SOURCE_FILES): Add autogen.sh.

2022-07-05  Bruno Haible  <bruno@clisp.org>

	Add support for reproducible builds.
	Suggested by Richard Purdie <richard.purdie@linuxfoundation.org> in
	<https://lists.gnu.org/archive/html/bug-gperf/2022-07/msg00000.html>.
	* autogen.sh: Import also lib/filename.h.
	* Makefile.in (IMPORTED_FILES): Add lib/filename.h.
	* src/options.cc: Include filename.h.
	(Options::print_options): Print only the base name of the program name.
	* tests/*.exp: Update.

2022-05-22  Bruno Haible  <bruno@clisp.org>

	Add GNU Project notice.
	* JOIN-GNU: New file. Inspired by a suggestion from José E. Marchesi
	on the gnu-prog-discuss mailing list.
	* README: Refer to it.
	* Makefile.in (SOURCE_FILES): Add it.
