@@ -77,6 +77,7 @@ hash (register const char *str, register size_t len)
       4, 4, 4, 4, 4, 4, 4, 4, 4, 4,
       4, 4, 4, 4, 4, 4, 4
     };
+  (void) len;
   return asso_values[(unsigned char)str[1]+1] + asso_values[(unsigned char)str[0]];
 }
 
