@@ -122,6 +122,7 @@ hash (register const char *str, register size_t len)
       8, 8, 8, 8, 8, 8, 8, 8, 8, 8,
       8, 8, 8, 8, 8, 8, 8, 8, 8
     };
+  (void) len;
   return asso_values[(unsigned char)str[1]+3] + asso_values[(unsigned char)str[0]];
 }
 
